ffxiv-tracker/src/snapshots/lib__profile__test__nova_dubois.snap
---
source: ffxiv-tracker/src/profile.rs
expression: "Profile::parse(profile.id, profile_html, jobs_html)?"
---
Profile {
    user_id: 9036942,
    free_company: Some(
        "Scary Lizard League",
    ),
    name: "Nova Dubois",
    nameday: "26th Sun of the 4th Umbral Moon",
    guardian: "Rhalgr, the Destroyer",
    city_state: "Ul'dah",
    server: "Zalera [Crystal]",
    race: "Miqo'te",
    clan: "Keeper of the Moon",
    gender: "♀",
    grand_company: Some(
        "Order of the Twin Adder",
    ),
    grand_company_rank: Some(
        "Serpent Captain",
    ),
    hp: 70728,
    mp: 10000,
    jobs: PlayerJobSnapshot(
        {
            Paladin: JobSnapshot {
                job: Paladin,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        994560,
                        13278000,
                    ),
                ),
            },
            Warrior: JobSnapshot {
                job: Warrior,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            DarkKnight: JobSnapshot {
                job: DarkKnight,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Gunbreaker: JobSnapshot {
                job: Gunbreaker,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            WhiteMage: JobSnapshot {
                job: WhiteMage,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Scholar: JobSnapshot {
                job: Scholar,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Astrologian: JobSnapshot {
                job: Astrologian,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Sage: JobSnapshot {
                job: Sage,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Monk: JobSnapshot {
                job: Monk,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Dragoon: JobSnapshot {
                job: Dragoon,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Ninja: JobSnapshot {
                job: Ninja,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Samurai: JobSnapshot {
                job: Samurai,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Reaper: JobSnapshot {
                job: Reaper,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Viper: JobSnapshot {
                job: Viper,
                level: None,
                exp: None,
            },
            Bard: JobSnapshot {
                job: Bard,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Machinist: JobSnapshot {
                job: Machinist,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Dancer: JobSnapshot {
                job: Dancer,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            BlackMage: JobSnapshot {
                job: BlackMage,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        7929629,
                        13278000,
                    ),
                ),
            },
            Summoner: JobSnapshot {
                job: Summoner,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            RedMage: JobSnapshot {
                job: RedMage,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Pictomancer: JobSnapshot {
                job: Pictomancer,
                level: None,
                exp: None,
            },
            BlueMage: JobSnapshot {
                job: BlueMage,
                level: Some(
                    80,
                ),
                exp: None,
            },
            Carpenter: JobSnapshot {
                job: Carpenter,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Armorer: JobSnapshot {
                job: Armorer,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Blacksmith: JobSnapshot {
                job: Blacksmith,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Goldsmith: JobSnapshot {
                job: Goldsmith,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Leatherworker: JobSnapshot {
                job: Leatherworker,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Weaver: JobSnapshot {
                job: Weaver,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Alchemist: JobSnapshot {
                job: Alchemist,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Culinarian: JobSnapshot {
                job: Culinarian,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Miner: JobSnapshot {
                job: Miner,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Botanist: JobSnapshot {
                job: Botanist,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
            Fisher: JobSnapshot {
                job: Fisher,
                level: Some(
                    90,
                ),
                exp: Some(
                    (
                        0,
                        13278000,
                    ),
                ),
            },
        },
    ),
}
